# praxis

./: .gitattributes  .gitignore  CMakeLists.txt  GLEditor.cpp  GLEditor.h  LICENCE  PolyGlyph.cpp  PolyGlyph.h  PraxisLog.cpp  PraxisLog.h  PraxisServer.cpp  PraxisServer.h  PraxisTexture.cpp  PraxisTexture.h  README.md  RtMidi.cpp  RtMidi.h  SingleWorldConfiguration.cpp  SingleWorldConfiguration.h  World.cpp  World.h  audioMidi.cpp  audioWave.cpp  forthCallbacks.cpp  forthCallbacks.h  forthInterface.cpp  forthInterface.h  ioCallbacks.cpp  ioCallbacks.h  ioInterface.cpp  ioInterface.h  lispCallbacks.cpp  lispCallbacks.h  lispInterface.cpp  lispInterface.h  luaCB.h  luaCBClipboard.cpp  luaCBEditor.cpp  luaCBJoystick.cpp  luaCBLang.cpp  (+17 more)
MathLib/: ML_HermiteCurve.cpp  ML_HermiteCurve.h  ML_Maths.cpp  ML_Maths.h  ML_Matrix.cpp  ML_Matrix.h  ML_Quaternion.cpp  ML_Quaternion.h  ML_Transform.cpp  ML_Transform.h  ML_Types.h  ML_Vector.cpp  ML_Vector.h
Neural/: AI_NeuralNetwork.cpp  AI_NeuralNetwork.h  AI_NeuralNetworkPatternTrainer.cpp  AI_NeuralNetworkPatternTrainer.h  AI_NeuralNetworkSystem.cpp  AI_NeuralNetworkSystem.h  AI_Neuron.cpp  AI_Neuron.h  AI_Synapse.cpp  AI_Synapse.h  UT_Functions.cpp  UT_Functions.h  UT_String.cpp  UT_String.h
Voxel/: Voxel.cpp  Voxel.h  VoxelBlock.cpp  VoxelBlock.h
ficl-4.1.0/: compatibility.c  dictionary.c  double.c  extras.c  ficl.h  ficllocal.h  ficltokens.h  float.c  lzcompress.c  primitives.c  softcore.c  tools.c  vm.c
io/: Common.h  IoInstallPrefix.h  IoMessage.c  IoObject.c  IoObject.h  IoVMApi.h  IoVMInit.c  UArray.c  UArray_math.c  UArray_math.h  UArray_string.c  io_main.c  simd_cp.h
lpeg-0.12/: lptree.c  lptypes.h
pforth/: pf_core.c  pf_core.h  pf_guts.h  pf_inc1.h  pf_inner.c  pf_io.h  pf_main.c  pf_save.c  pf_text.c  pf_types.h  pfcustom.c  pfinnrfp.h  pforth.h
s7/: cload.scm  ffitest.c  gdb-s7.scm  glistener.c  glistener.h  libc.scm  libdl.scm  libgdbm.scm  (+11 more)
(+501 files in other folders)
